<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.nav.dokument</groupId>
    <artifactId>spring-datasource-hikari-vault</artifactId>
    <version>1.0-SNAPSHOT</version>

    <repositories>
        <repository>
            <id>DIFI beta-meldingsutveksling</id>
            <url>https://beta-meldingsutveksling.difi.no/content/repositories/itest/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>no.difi.meldingsutveksling</groupId>
            <artifactId>integrasjonspunkt</artifactId>
            <version>2.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.bettercloud</groupId>
            <artifactId>vault-java-driver</artifactId>
            <version>3.1.0</version>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.2.6</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <goals>
                    <goal>copy</goal>
                </goals>
                <!-- Note: This does _NOT_ include transitive dependencies, these dependencies do not require any. -->
                <configuration>
                    <artifactItems>
                        <dependency>
                            <groupId>com.bettercloud</groupId>
                            <artifactId>vault-java-driver</artifactId>
                        </dependency>
                        <dependency>
                            <groupId>org.postgresql</groupId>
                            <artifactId>postgresql</artifactId>
                        </dependency>
                        <dependency>
                            <groupId>no.difi.meldingsutveksling</groupId>
                            <artifactId>integrasjonspunkt</artifactId>
                        </dependency>
                    </artifactItems>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>